Fix spacing of button

--- a/src/containers/Login/Login.scss
+++ b/src/containers/Login/Login.scss
@@ -43,5 +43,5 @@ h1 {
     font-family: 'Henny Penny', cursive;
     font-size: 2em;
     height: 60px;
-    margin-bottom: 10%;
+    margin: 50% 0 0 0;
 }
